[package]
name = "jolt"
version = "0.1.0"
authors = [
    # author of original Spartan paper and code base
    "Srinath Setty <srinath@microsoft.com>",
    # authors who contributed to the Arkworks Spartan fork
    "Zhenfei Zhang <zhenfei.zhang@hotmail.com>",
    # authors who contributed to Lasso/Jolt
    "Michael Zhu <mzhu@a16z.com>",
    "Sam Ragsdale <sragsdale@a16z.com>",
    "Noah Citron <ncitron@a16z.com>",
    "Arasu Arun <arasu.arun5@gmail.com>",
    "Quang Dao <dvquang85@gmail.com>",
]
edition = "2021"
description = "The lookup singularity. Based on Spartan; built on Arkworks."
documentation = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
license-file = "LICENSE"
keywords = ["SNARK", "cryptography", "proofs"]

[workspace]
members = [
    "jolt-core",
    "jolt-inlines/sha2",
    "jolt-inlines/keccak256",
    "tracer",
    "common",
    "jolt-platform",
    "jolt-sdk",
    "jolt-sdk/macros",
    "examples/btreemap/host",
    "examples/btreemap/guest",
    "examples/collatz",
    "examples/collatz/guest",
    "examples/fibonacci",
    "examples/fibonacci/guest",
    "examples/sha2-ex",
    "examples/sha2-ex/guest",
    "examples/sha3-ex",
    "examples/sha3-ex/guest",
    "examples/sha2-chain",
    "examples/sha2-chain/guest",
    "examples/sha3-chain",
    "examples/sha3-chain/guest",
    "examples/multi-function",
    "examples/multi-function/guest",
    "examples/alloc",
    "examples/alloc/guest",
    "examples/stdlib",
    "examples/stdlib/guest",
    "examples/muldiv",
    "examples/muldiv/guest",
    "examples/overflow",
    "examples/overflow/guest",
    "examples/memory-ops",
    "examples/memory-ops/guest",
    "examples/recursion",
    "examples/recursion/guest",
]

[features]
host = ["jolt-sdk/host"]

[lib]
path = "./src/lib.rs"

[[bin]]
name = "jolt"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
rand = "0.8.5"
sysinfo = "0.30.8"
syn = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.0"
toml_edit = "0.22.14"

jolt-sdk = { path = "./jolt-sdk" }
jolt-core = { path = "./jolt-core" }
tracer = { path = "./tracer" }
common = { path = "./common" }

[profile.test]
opt-level = 3
lto = "off"

[profile.release]
debug = 1
lto = "fat"

[profile.build-fast]
inherits = "release"
incremental = true
lto = "off"
overflow-checks = true

[profile.guest]
inherits = "release"
debug = false

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/0xAndoroid/allocative", branch = "fix/impl-for-u128" }

[workspace.metadata.cargo-machete]
ignored = ["jolt-sdk"]

[workspace.dependencies]
spinners = { version = "4.1.1", default-features = false }
