[package]
name = "jolt"
version = "0.1.0"
authors = [
    # author of original Spartan paper and code base
    "Srinath Setty <srinath@microsoft.com>",
    # authors who contributed to the Arkworks Spartan fork
    "Zhenfei Zhang <zhenfei.zhang@hotmail.com>",
    # authors who contributed to Lasso/Jolt
    "Michael Zhu <mzhu@a16z.com>",
    "Sam Ragsdale <sragsdale@a16z.com>",
    "Noah Citron <ncitron@a16z.com>",
    "Arasu Arun <arasu.arun5@gmail.com>",
    "Quang Dao <dvquang85@gmail.com>",
    "Andrew Tretyakov <atretyakov@a16z.com>",
    "Markos Georghiades <mgeorghiades@a16z.com>",
]
edition = "2021"
description = "The lookup singularity. Based on Spartan; built on Arkworks."
documentation = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
license-file = "LICENSE"
keywords = ["SNARK", "cryptography", "proofs"]

[workspace]
members = [
    "jolt-core",
    "tracer",
    "common",
    "jolt-platform",
    "jolt-sdk",
    "jolt-sdk/macros",
    "jolt-inlines/sha2",
    "jolt-inlines/keccak256",
    "jolt-inlines/blake2",
    "jolt-inlines/blake3",
    "jolt-inlines/bigint",
    "examples/btreemap/host",
    "examples/btreemap/guest",
    "examples/collatz",
    "examples/collatz/guest",
    "examples/fibonacci",
    "examples/fibonacci/guest",
    "examples/sha2-ex",
    "examples/sha2-ex/guest",
    "examples/sha3-ex",
    "examples/sha3-ex/guest",
    "examples/sha2-chain",
    "examples/sha2-chain/guest",
    "examples/sha3-chain",
    "examples/sha3-chain/guest",
    "examples/multi-function",
    "examples/multi-function/guest",
    "examples/alloc",
    "examples/alloc/guest",
    "examples/stdlib",
    "examples/stdlib/guest",
    "examples/muldiv",
    "examples/muldiv/guest",
    "examples/overflow",
    "examples/overflow/guest",
    "examples/memory-ops",
    "examples/memory-ops/guest",
    "examples/recursion",
    "examples/recursion/guest",
    "examples/recover-ecdsa",
    "examples/recover-ecdsa/guest",
    "examples/random",
    "examples/random/guest",
    "examples/malloc",
    "examples/malloc/guest",
    "examples/merkle-tree",
    "examples/merkle-tree/guest",
    "examples/hash-bench",
    "examples/hash-bench/guest",
    "zklean-extractor",
    "z3-verifier",
]

[features]
host = ["jolt-sdk/host"]

[lib]
path = "./src/lib.rs"

[[bin]]
name = "jolt"
path = "./src/main.rs"

[dependencies]
clap.workspace = true
eyre.workspace = true
mimalloc.workspace = true
rand.workspace = true
sysinfo.workspace = true
syn.workspace = true
serde.workspace = true
rmp-serde.workspace = true
toml_edit.workspace = true

jolt-sdk = { workspace = true, features = ["host"] }
jolt-core = { workspace = true, features = ["default"] }
tracer = { workspace = true, features = ["default"] }
common = { workspace = true, features = ["std"] }

[profile.test]
opt-level = 3
lto = "off"

[profile.release]
debug = 1
lto = "fat"

[profile.build-fast]
inherits = "release"
incremental = true
lto = "off"
overflow-checks = true

[profile.guest]
inherits = "release"
debug = false

[patch.crates-io]
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }

[workspace.metadata.cargo-machete]
ignored = ["jolt-sdk"]

[workspace.dependencies]
# Cryptography and Math
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-grumpkin = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false, features = [
    "derive",
] }
ark-serialize-derive = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
sha2 = "0.10"
sha3 = "0.10.8"
blake2 = "0.10"
blake3 = { version = "1.5.0" }
jolt-optimizations = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
dory = { package = "dory-pcs", version = "0.1.0", features = ["backends", "cache", "disk-persistence"] }

# Core Utilities
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
anyhow = "1.0.97"
thiserror = "1.0.58"
derive_more = { version = "2.0.1", features = [
    "from",
], default-features = false }
strum = { version = "0.26.3", default-features = false }
strum_macros = "0.26.4"
itertools = "0.10.0"
paste = "1.0.15"
lazy_static = "1.5.0"
once_cell = "1.19.0"
fixedbitset = "0.5.0"
chrono = { version = "0.4.42" }

# Randomness
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
rand_distr = "0.4.3"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }
rmp-serde = "1.3.0"
bincode = "1.3.3"
postcard = { version = "1.0.8", default-features = false }
toml_edit = "0.22.14"

# Numeric
num = "0.4.3"
num-integer = "0.1.45"
num-derive = "0.4.2"
num-traits = "0.2.19"

# System and Platform
sysinfo = "0.30.8"
target-lexicon = { version = "0.12.14" }
dirs = { version = "5.0.1" }
memory-stats = { version = "1.0.0", features = ["always_use_statm"] }
mimalloc = "0.1"

# Async and Networking
tokio = { version = "1.38.0" }
reqwest = { version = "0.12.3", features = ["json", "blocking"] }

# Parallel Processing
rayon = { version = "^1.8.0" }

# Tracing and Profiling
tracing = { version = "0.1.37", default-features = false }
tracing-chrome = "0.7.1"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
indicatif = { version = "0.17.8" }
inferno = { version = "0.12.3" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }

# Parsing
syn = { version = "1.0.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.79"

# Platform-specific
fnv = { version = "1.0.7", default-features = false }
object = { version = "0.36.7", features = [
    "build_core",
    "elf",
], default-features = false }
addr2line = "0.25.1"
getrandom = { version = "0.2.16", default-features = false }
getrandom_v02 = { version = "0.2.16", package = "getrandom", default-features = false }
getrandom_v03 = { version = "0.3.3", package = "getrandom", default-features = false }

# Build and Development
ctor = { version = "0.2" }
hex-literal = "0.4.1"
spinners = { version = "4.1.1", default-features = false }

# Testing
criterion = { version = "0.5.1", features = ["html_reports"] }
iai-callgrind = "0.10.2"
serial_test = "3.2.0"

# Internal dependencies
common = { path = "./common", default-features = false }
tracer = { path = "./tracer", default-features = false }
jolt-core = { path = "./jolt-core", default-features = false }
jolt-platform = { path = "./jolt-platform", default-features = false }
jolt-sdk = { path = "./jolt-sdk", default-features = false }
jolt-sdk-macros = { path = "./jolt-sdk/macros" }
jolt-inlines-sha2 = { path = "./jolt-inlines/sha2", default-features = false }
jolt-inlines-keccak256 = { path = "./jolt-inlines/keccak256", default-features = false }
jolt-inlines-blake2 = { path = "./jolt-inlines/blake2", default-features = false }
jolt-inlines-blake3 = { path = "./jolt-inlines/blake3", default-features = false }
jolt-inlines-bigint = { path = "./jolt-inlines/bigint", default-features = false }
