[package]
name = "jolt"
version = "0.1.0"
authors = [
  # author of original Spartan paper and code base
  "Srinath Setty <srinath@microsoft.com>",
  # authors who contributed to the Arkworks Spartan fork
  "Zhenfei Zhang <zhenfei.zhang@hotmail.com>",
  # authors who contributed to Lasso/Jolt
  "Michael Zhu <mzhu@a16z.com>",
  "Sam Ragsdale <sragsdale@a16z.com>",
  "Noah Citron <ncitron@a16z.com>",
  "Arasu Arun <arasu.arun5@gmail.com>",
  "Quang Dao <dvquang85@gmail.com>",
  "Andrew Tretyakov <atretyakov@a16z.com>",
  "Markos Georghiades <mgeorghiades@a16z.com>",
]
edition = "2021"
description = "The lookup singularity. Based on Spartan; built on Arkworks."
documentation = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
license-file = "LICENSE"
keywords = ["SNARK", "cryptography", "proofs"]

[workspace]
members = [
    "crates/jolt-transcript",
    "crates/jolt-field",
    "crates/jolt-poly",
    "crates/jolt-openings",
    "crates/jolt-sumcheck",
    "crates/jolt-spartan",
    "crates/jolt-instructions",
    "crates/jolt-dory",
    "crates/jolt-zkvm",
    "jolt-core",
    "tracer",
    "common",
    "jolt-platform",
    "jolt-sdk",
    "jolt-sdk/macros",
    "jolt-inlines/sha2",
    "jolt-inlines/keccak256",
    "jolt-inlines/blake2",
    "jolt-inlines/blake3",
    "jolt-inlines/bigint",
    "jolt-inlines/secp256k1",
    "jolt-inlines/grumpkin",
    "examples/btreemap/host",
    "examples/btreemap/guest",
    "examples/collatz",
    "examples/collatz/guest",
    "examples/fibonacci",
    "examples/fibonacci/guest",
    "examples/secp256k1-ecdsa-verify",
    "examples/secp256k1-ecdsa-verify/guest",
    "examples/sha2-ex",
    "examples/sha2-ex/guest",
    "examples/sha3-ex",
    "examples/sha3-ex/guest",
    "examples/sha2-chain",
    "examples/sha2-chain/guest",
    "examples/sha3-chain",
    "examples/sha3-chain/guest",
    "examples/multi-function",
    "examples/multi-function/guest",
    "examples/alloc",
    "examples/alloc/guest",
    "examples/stdlib",
    "examples/stdlib/guest",
    "examples/muldiv",
    "examples/muldiv/guest",
    "examples/overflow",
    "examples/overflow/guest",
    "examples/memory-ops",
    "examples/memory-ops/guest",
    "examples/backtrace",
    "examples/backtrace/guest-nostd",
    "examples/backtrace/guest-std",
    "examples/recursion",
    "examples/recursion/guest",
    "examples/recover-ecdsa",
    "examples/recover-ecdsa/guest",
    "examples/random",
    "examples/random/guest",
    "examples/malloc",
    "examples/malloc/guest",
    "examples/merkle-tree",
    "examples/merkle-tree/guest",
    "examples/hash-bench",
    "examples/hash-bench/guest",
    "examples/modinv",
    "examples/modinv/guest",
    "examples/advice-demo",
    "examples/advice-demo/guest",
    "examples/sig-recovery/host",
    "examples/sig-recovery/guest",
    "zklean-extractor",
    "z3-verifier",
]

[features]
host = ["jolt-sdk/host"]

[lib]
path = "./src/lib.rs"

[[bin]]
name = "jolt"
path = "./src/main.rs"

[dependencies]
clap.workspace = true
eyre.workspace = true
mimalloc.workspace = true
rand.workspace = true
sysinfo.workspace = true
syn.workspace = true
toml_edit.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
zeroos-build.workspace = true

ark-bn254.workspace = true

jolt-sdk = { workspace = true, features = ["host"] }
jolt-core = { workspace = true, features = ["default"] }
common = { workspace = true, features = ["std"] }

[profile.test]
opt-level = 3
lto = "off"

[profile.release]
debug = 1
lto = "fat"

[profile.build-fast]
inherits = "release"
incremental = true
lto = "off"
overflow-checks = true

[profile.guest]
inherits = "release"
debug = false
lto = "fat"
strip = false
codegen-units = 1

[patch.crates-io]
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }

[workspace.metadata.cargo-machete]
ignored = ["jolt-sdk"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Pedantic overrides — suppressed because they're too noisy for math-heavy ZK code
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
similar_names = "allow"
too_many_lines = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
items_after_statements = "allow"
uninlined_format_args = "allow"
return_self_not_must_use = "allow"
default_trait_access = "allow"
match_same_arms = "allow"
manual_let_else = "allow"
used_underscore_binding = "allow"
no_effect_underscore_binding = "allow"
needless_pass_by_value = "allow"
trivially_copy_pass_by_ref = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_wraps = "allow"
if_not_else = "allow"

# Numeric/math code — ZK cryptography uses these patterns pervasively
float_cmp = "allow"
many_single_char_names = "allow"
wildcard_imports = "allow"
inline_always = "allow"
checked_conversions = "allow"

# Cast lints — field arithmetic requires intentional casting
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"

# Code quality — hard denies to catch AI-generated slop
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unused_results = "warn"

[workspace.dependencies]
# Cryptography and Math
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-grumpkin = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false, features = [
  "derive",
] }
ark-secp256k1 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false }
ark-serialize-derive = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
sha2 = "0.10"
sha3 = "0.10.8"
blake2 = "0.10"
blake3 = { version = "1.5.0" }
jolt-optimizations = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
dory = { package = "dory-pcs", version = "0.3.0", features = ["backends", "cache", "disk-persistence"] }

# Core Utilities
clap = { version = "4.5.4", features = ["derive"] }
eyre = "0.6.12"
anyhow = "1.0.97"
thiserror = "2.0.18"
derive_more = { version = "2.0.1", features = [
  "from",
], default-features = false }
strum = { version = "0.27.2", default-features = false }
strum_macros = "0.26.4"
itertools = "0.10.0"
paste = "1.0.15"
fixedbitset = "0.5.0"
chrono = { version = "0.4.42" }

# Randomness
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
rand_distr = "0.4.3"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false }
rmp-serde = "1.3.0"
bincode = "1.3.3"
postcard = { version = "1.0.8", default-features = false, features = [
  "embedded-io-06",
] }
toml_edit = "0.22.14"
bytemuck = "1.23.2"
bytemuck_derive = "1.10.1"

# Numeric
num = "0.4.3"
num-integer = { version = "0.1.45", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false }

# System and Platform
sysinfo = "0.30.8"
memory-stats = { version = "1.0.0", features = ["always_use_statm"] }
mimalloc = "0.1"

# Parallel Processing
rayon = { version = "^1.8.0" }

# Tracing and Profiling
tracing = { version = "0.1.37", default-features = false }
tracing-chrome = "0.7.1"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
inferno = { version = "0.12.3" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }

# Parsing
syn = { version = "1.0.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.79"

# Platform-specific
fnv = { version = "1.0.7", default-features = false }
object = { version = "0.38.1", features = ["build_core", "elf"], default-features = false }
addr2line = "0.26.0"
getrandom = { version = "0.2.16", default-features = false }
getrandom_v02 = { version = "0.2.16", package = "getrandom", default-features = false }
getrandom_v03 = { version = "0.3.3", package = "getrandom", default-features = false }

# Build and Development
ctor = { version = "0.6" }
hex-literal = "0.4.1"
hex = "0.4.3"
spinners = { version = "4.1.1", default-features = false }

# Testing
criterion = { version = "0.5.1", features = ["html_reports"] }
iai-callgrind = "0.16.1"
serial_test = "3.4.0"

# Logging
log = { version = "0.4" }
env_logger = { version = "0.11" }

# ZeroOS build system
zeroos-build = { git = "https://github.com/LayerZero-Labs/ZeroOS.git", default-features = false, rev = "ebdf6de34a0719022d42c9d719391b02ba747f8b" }
zeroos = { git = "https://github.com/LayerZero-Labs/ZeroOS.git", default-features = false, rev = "ebdf6de34a0719022d42c9d719391b02ba747f8b" }
cfg-if = "1.0"
riscv = { version = "0.12", default-features = false }

# Ethereum/Crypto (for sig-recovery example)
alloy-primitives = "1"
alloy-consensus = "1"
alloy-eips = "1"
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", features = [
  "rayon",
  "serde",
] }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", features = [
  "serde",
] }
secp256k1 = { version = "0.30", features = ["recovery", "rand"] }

# Internal dependencies
common = { path = "./common", default-features = false }
tracer = { path = "./tracer", default-features = false }
jolt-core = { path = "./jolt-core", default-features = false }
jolt-platform = { path = "./jolt-platform", default-features = false }
jolt-sdk = { path = "./jolt-sdk", default-features = false }
jolt-sdk-macros = { path = "./jolt-sdk/macros" }
jolt-inlines-sha2 = { path = "./jolt-inlines/sha2", default-features = false }
jolt-inlines-keccak256 = { path = "./jolt-inlines/keccak256", default-features = false }
jolt-inlines-blake2 = { path = "./jolt-inlines/blake2", default-features = false }
jolt-inlines-blake3 = { path = "./jolt-inlines/blake3", default-features = false }
jolt-inlines-bigint = { path = "./jolt-inlines/bigint", default-features = false }
jolt-inlines-secp256k1 = { path = "./jolt-inlines/secp256k1", default-features = false }
jolt-inlines-grumpkin = { path = "./jolt-inlines/grumpkin", default-features = false }
