[package]
name = "common"
version = "0.2.0"
edition = "2021"

[features]
default = ["std"]
std = [
    "ark-serialize/std",
    "serde/std",
    "syn/full",
]

[dependencies]
allocative.workspace = true
ark-serialize = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
syn = { workspace = true, optional = true }
