[package]
name = "gnark-transpiler"
version = "0.1.0"
edition = "2021"
description = "Transpiles Jolt verifier stages to Gnark circuits for Groth16 proving"

[dependencies]
ark-std.workspace = true
ark-bn254.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

jolt-core = { path = "../jolt-core" }
zklean-extractor = { path = "../zklean-extractor" }
common = { path = "../common" }
light-poseidon = "0.4.0"
num-bigint = "0.4"

[features]
default = []
debug-expected-output = ["jolt-core/debug-expected-output"]
# Transcript features - must match proof generation
# Only one can be enabled at a time (enforced by jolt-core)
transcript-poseidon = ["jolt-core/transcript-poseidon"]
transcript-keccak = ["jolt-core/transcript-keccak"]
transcript-blake2b = ["jolt-core/transcript-blake2b"]

[[bin]]
name = "gnark-transpiler"
path = "src/main.rs"

[[bin]]
name = "compute_r_inv"
path = "src/bin/compute_r_inv.rs"
