[package]
name = "jolt-core"
version = "0.1.0"
authors = [
    # author of original Spartan paper and code base
    "Srinath Setty <srinath@microsoft.com>",
    # authors who contributed to the Arkworks Spartan fork
    "Zhenfei Zhang <zhenfei.zhang@hotmail.com>",
    # authors who contributed to Lasso/Jolt
    "Michael Zhu <mzhu@a16z.com>",
    "Sam Ragsdale <sragsdale@a16z.com>",
    "Noah Citron <ncitron@a16z.com>",
    "Arasu Arun <arasu.arun5@gmail.com>",
    "Quang Dao <dvquang85@gmail.com>",
]
edition = "2021"
description = "The lookup singularity. Based on Spartan; built on Arkworks."
documentation = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"
license-file = "LICENSE"
keywords = ["SNARK", "cryptography", "proofs", "zkVM"]

[features]
default = ["host"]
host = [
    "dep:reqwest",
    "dep:tokio",
    "dep:indicatif",
    "dep:dirs",
    "dep:target-lexicon",
    "prover",
    "dep:sha2_inline",
    "dep:sha3_inline",
]
prover = [
    "minimal",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-std/parallel",
    "dory/parallel"
]
# This is for building jolt-core without prover capabilities, e.g. for recursion
# jolt-core needs std and rayon to compile, so these are the minimal set of features.
minimal = [
    "ark-ec/std",
    "ark-ff/std",
    "ark-std/std",
    "ark-ff/asm",
    "rayon",
]
allocative = ["dep:inferno", "ark-ff/allocative"]
test_incremental = []

[dependencies]
ark-bn254 = "0.5.0"
jolt-optimizations = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false, features = [
    "derive",
] }
ark-serialize-derive = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0" }
clap = { version = "4.3.10", features = ["derive"] }
fixedbitset = "0.5.0"
itertools = "0.10.0"
num-integer = "0.1.45"
num-derive = "0.4.2"
num = "0.4.3"
num-traits = "0.2.19"
postcard = { version = "1.0.8", default-features = false, features = [
    "use-std",
] }
rand = "0.8.5"
rand_chacha = { version = "0.3.0", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
rayon = { version = "^1.8.0", optional = true }
serde = { version = "1.0.*", default-features = false }
sha3 = "0.10.8"
blake2 = "0.10"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.58"
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
target-lexicon = { version = "0.12.14", optional = true }
reqwest = { version = "0.12.3", features = [
    "json",
    "blocking",
], optional = true }
dirs = { version = "5.0.1", optional = true }
eyre = "0.6.12"
indicatif = { version = "0.17.8", optional = true }
common = { path = "../common" }
tracer = { path = "../tracer", default-features = false, features = ["std"] }
bincode = "1.3.3"
tokio = { version = "1.38.0", optional = true }
once_cell = "1.19.0"
rand_distr = "0.4.3"
anyhow = "1.0.97"
derive_more = { version = "2.0.1", features = ["from"] }
paste = "1.0.15"
dory = { git = "https://github.com/spaceandtimefdn/sxt-dory", branch = "feat/return_row_commitments" }
lazy_static = "1.5.0"
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
inferno = { version = "0.12.3", optional = true }
jolt-platform = { path = "../jolt-platform", features = ["std"] }
sha2_inline = { package = "jolt-inlines-sha2", path = "../jolt-inlines/sha2", features = [
    "host",
], optional = true }
sha3_inline = { package = "jolt-inlines-keccak256", path = "../jolt-inlines/keccak256", features = [
    "host",
], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
iai-callgrind = "0.10.2"
serial_test = "3.2.0"
tracer = { path = "../tracer", default-features = false, features = [
    "std",
    "test-utils",
] }

[build-dependencies]
common = { path = "../common" }

[[bench]]
name = "iai"
harness = false

[[bench]]
name = "commit"
harness = false

[[bench]]
name = "binding"
harness = false

[[bench]]
name = "poly_bench"
harness = false

[[bench]]
name = "compact_poly_bench"
harness = false

[lib]
name = "jolt_core"
path = "src/lib.rs"

[[bin]]
name = "jolt-core"
path = "src/bin/jolt_core.rs"
required-features = ["host"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memory-stats = "1.0.0"
tokio = { version = "1.38.0", optional = true, features = ["rt-multi-thread"] }

